style.css
/* ... */
.view-project-text {
    display: block;
    margin-top: 1rem;
    margin-bottom: 1rem;
    font-family: Roboto, Arial;
    font-weight: 400;
    text-transform: uppercase;
    font-size: 1.6rem;
}

.project-text {
    display: flex;
    flex-flow: row nowrap;
    justify-content: flex-start;
    align-items: center;
}

.project-desc-text {
    font-size: 1.6rem;
    color: var(--text-secondary-color, rgba(0, 0, 0, 0.66));
}

.line-height-paragraph {
    line-height: 1.5;
}

.faint-text {
    color: var(--text-secondary-color, rgba(0, 0, 0, 0.66));
}

.back-link {
    display: block;
    font-size: 1.6rem;
    font-family: Roboto, Arial;
    text-transform: uppercase;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.hide-scroll::-webkit-scrollbar {
    display: none;
  }
  
  /* Hide scrollbar for IE, Edge and Firefox */
  .hide-scroll {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
  }

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap; /* added line */
    border: 0;
}

.light-text {
    font-weight: 300;
}

.bold-text {
    font-weight: 700;
}

.regular-text {
    font-weight: 400;
}

.black-border {
    border: 1px solid black;
}

.row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.column {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-basis: 100%;
    flex: 1;
}

.quad-column {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-basis: 100%;
    flex: 4;
}

.img-gallery-wrapper {
    background-color: var(--img-gallery-background, #FFF);
    box-shadow:  0px 2px 1px -1px rgba(0, 0, 0, 0.2), /* 1dp - umbra */
    0px 1px 1px 0px rgba(0, 0, 0, 0.14), /* 1dp - penumbra */
    0px 1px 3px 0px rgba(0, 0, 0, 0.12); /* 1dp - ambient */
    padding: 1.6rem;
    max-width: 45rem;
    align-self: start;
}

.img-gallery-item {
    display: none;
}

.prev, .next {
    cursor: pointer;
    font-size: 5rem;
    transition: 0.3s ease;
    user-select: none;
    color: var(--text-primary-color, rgba(0, 0, 0, 0.87));
}

.prev:hover, .next:hover {
    color: var(--color-primary, #FF544A);
}

/* The dots/bullets/indicators */
.dot {
    cursor: pointer;
    height: 1.6rem;
    width: 1.6rem;
    margin: 0.8rem 0.2rem 0.8rem 0.2rem;
    background-color: var(--dot-background, #BBB);
    border-radius: 50%;
    transition: background-color 0.3s ease;
}

.active, .dot:hover {
    background-color: var(--color-primary, #FF544A);
}

.color-mode_btn {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 1rem 0rem 1rem 1rem;
    font-size: 1.6rem;
    font-weight: 300;
    color: var(--text-primary-color, rgba(0, 0, 0, 0.87));
    cursor: pointer;
    background: none;
    border: none;
    float: right;
  }
  
.color-mode_btn svg {
    width: 30px;
    height: 30px;
    margin-left: 0.8rem;
    padding-bottom: 0.3rem;
    fill: none;
    stroke: var(--text-primary-color, rgba(0, 0, 0, 0.87));
    stroke-linecap: round;
    stroke-linejoin: round;
    stroke-width: 1.5px;
    transition: transform 0.3s ease;
  }

.color-mode_btn:hover svg,
.color-mode_btn:focus svg {
  outline: none;
  fill: #fff7d6;
  fill: var(--tertiary, #fff7d6);
  transform: scale(1.1);
}

.color-mode_btn:focus {
    outline: 2px dashed var(--color-primary, #FF544A);
}

/* Fading animation */
.fade {
    -webkit-animation-name: fade;
    -webkit-animation-duration: 1.5s;
    animation-name: fade;
    animation-duration: 1.5s;
}
  
@-webkit-keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
}
  
@keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
}

/* Fade in animation */
.fade-in {
    animation-name: fade-in;
    animation-duration: 1s;
}

@keyframes fade-in {
    from {opacity: 0}
    to {opacity: 1}
}

/* Slide in animation */
.slide-in {
    animation-name: slide-in;
    animation-duration: 1s;
}

@keyframes slide-in {
    from {padding-top: 30rem}
    to {padding-top: 0rem}
}

#main-title {
    width: 50%;
}

#university-icon {
    color: var(--text-primary-color, rgba(0, 0, 0, 0.87));
}

#menu-icon {
    font-size: 4.5rem;
    transition: transform .3s ease;
}

#main-div {
    display: grid;
    grid-template-columns: 1fr;
    width: 80%;
    max-width: 150rem;
    padding-bottom: 10rem;
    margin: auto;
}

#portfolio-div {
    display: none;
}

#contact-form {
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-start;
    align-items: center;
    padding: 3.2rem;
    max-width: 40rem;
    box-shadow:  0px 2px 1px -1px rgba(0, 0, 0, 0.2), /* 1dp - umbra */
    0px 1px 1px 0px rgba(0, 0, 0, 0.14), /* 1dp - penumbra */
    0px 1px 3px 0px rgba(0, 0, 0, 0.12); /* 1dp - ambient */
    background-color: var(--form-background, #FFF);
}

#com-pref-div {
    width: 100%;
    margin-bottom: 3.2rem;
    margin-top: 1.6rem;
}

#pref-text {
    margin-top: 0rem;
    margin-bottom: 0.8rem;
    width: 80%;
}

#message {
    margin-bottom: 0rem;
}

#socials-div {
    width: 80%;
    max-width: 150rem;
    margin: auto;
    padding: 1.6rem 0rem 1.6rem 0rem;
}

#navbar-elements {
    width: 80%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: row;
    border: 1px solid blue;
}

#nav-text-link-div {
    padding-top: 1.5rem;
    float: right;
}

#logo {
    padding-top: 1rem;
}

#back-icon {
    float: left;
    border: 1px solid rgba(0, 0, 0, 0);
    margin-right: 0.8rem;
}

#ft-tech-div {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
}

#about-imgs-div img {
    max-height: 70vh;
    width: auto;
}

@media screen and (max-width: 400px) {
    input[type="submit"] {
        width: 40%;
    }
}
/* ... */

